fixed overflow issues on height

--- a/css/equipment.css
+++ b/css/equipment.css
@@ -6661,8 +6661,13 @@ body {
       body .page {
         width: 80%; } }
   body h1 {
-    font-size: 2.1rem;
+    font-size: 1rem;
     font-weight: 600; }
+    @media only screen and (min-width: 768px) {
+      body h1 {
+        font-size: 2.1rem; }
+        body h1 p {
+          font-size: .667rem; } }
   body hr {
     border-width: 3px;
     width: 30%;
@@ -6716,6 +6721,7 @@ h2 {
     .grid .item .description {
       color: white;
       position: absolute;
+      padding: 1%;
       top: 0;
       right: 0;
       height: 100%;
