--- a/scss/landing.scss
+++ b/scss/landing.scss
@@ -63,7 +63,6 @@
 }
 
 #lower-section {
-  height: 500px;
   background-image: url("../../img/slr-camera-3752509_1920.jpg");
   background-size: cover;
   display: flex;
